--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,10 @@ node_js:
   - 0.8
 script: node test.js
 
+notifications:
+  irc:
+    channels:
+      - "irc.freenode.org#TotenDev"
+    template:
+      - "%{repository_url} (%{commit}) : %{message} %{foo}"
+      - "Build details: %{build_url}"
