--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ node_js:
 script: node test.js
 
 notifications:
+  email: dev@totendev.com
   irc:
     channels:
       - "irc.freenode.org#TotenDev"
